<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFrame">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="273dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/image_view"
                    android:layout_width="174dp"
                    android:layout_height="161dp"
                    android:onClick="onClickGallery"
                    app:srcCompat="@android:drawable/ic_menu_gallery" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center">

                <EditText
                    android:id="@+id/foodName"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/textInputFood" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center">

                <EditText
                    android:id="@+id/mealCount"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/textInputFoodCount" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center">

                <EditText
                    android:id="@+id/mealReview"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:hint="@string/textInputFoodReview" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/mealDate"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/textInputFoodDate" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="OnClickDateHandler"
                    android:text="@string/textButtonInputFoodDate" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/mealTime"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:text="@string/textInputFoodTime" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="OnClickTimeHandler"
                    android:text="@string/textButtonInputFoodTime" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="253dp">

                <com.google.android.gms.maps.MapView
                    android:id="@+id/mapview"
                    android:layout_width="match_parent"
                    android:layout_height="251dp">

                </com.google.android.gms.maps.MapView>
            </LinearLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="107dp"
                android:layout_height="44dp"
                android:onClick="addMeal"
                android:text="@string/textInputFoodInfo" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
