<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CBF6E1"
    tools:context=".MainMenuActivity">

    <Button
        android:id="@+id/showMealButton"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#4CAF50"
        android:onClick="navigateShowMeal"
        android:text="@string/textShowMeal"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/inputMealButton"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="252dp"
        android:backgroundTint="#4CAF50"
        android:backgroundTintMode="add"
        android:onClick="navigateInputMeal"
        android:text="@string/textInputMeal"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/analyzeMealButton"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/textAnalyzeMeal"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputMealButton"
        app:layout_constraintVertical_bias="0.188" />
</androidx.constraintlayout.widget.ConstraintLayout>